fix: Change footer on mobile to not be fixed

--- a/src/app/feature/page/page.component.scss
+++ b/src/app/feature/page/page.component.scss
@@ -3,7 +3,7 @@
 header { 
     position: fixed;   
     top: 0;
-    width: 100vw;
+    width: 100%;
     display: flex;
     height: 10vh;
     background: yellow;
@@ -65,8 +65,7 @@ article {
 footer {
     height: 20vh;
     width: 100vw;
-    border-top: 1px solid #e3e3e3;
-    display: flex;
+    border-top: 1px solid #e3e3e3;    
     position: fixed;
     bottom: 0;
     background-color: #fff;
@@ -74,10 +73,20 @@ footer {
     flex-direction: column;
     justify-content: center;
     padding: $padding-horizontal;
+    
+    span {
+        text-align: center;
+    }
 }
 
 .footer-link {
     color: darken($yellow, 60);
     text-align: center;
     padding-top: 16px;
+}
+
+@media screen and (orientation: portrait) {
+    footer {
+        position: relative;
+    }
 }
